<resources>
    <string name="app_name">MovieRecommender</string>

    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>

    <!-- Layout Mostrar Peliculas Principal -->
    <string name="buscador_placeholder">Buscar películas</string>
    <string name="selector_todo">Todo</string>
    <string name="selector_recomendados">Recomendados</string>
    <string name="lista_genero_accion">Accion</string>
    <string name="lista_genero_terror">Terror</string>
    <string name="lista_genero_comedia">Comedia</string>
    <string name="lista_genero_romance">Romance</string>
    <string name="lista_genero_animacion">Animación</string>
    <string name="lista_genero_musica">Música</string>
    <string name="lista_genero_ciencia_ficcion">Ciencia Ficción</string>
    <string name="lista_genero_misterio">Misterio</string>
    <string name="lista_genero_fantasia">Fantasia</string>
    <string name="peliculas_no_encontradas">No se encontraron resultados</string>

    <!-- Mostrar información de la pelicula -->
    <string name="nombre_pelicula">Nombre Pelicula</string>
    <string name="descripcion">Descripción:</string>
    <string name="poster_placeholder">Imagen por defecto</string>
    <string name="nombre_descripcion">descripción</string>
    <string name="genero">Genero:</string>
    <string name="nombre_genero">Accion</string>
    <string name="año">Año:</string>
    <string name="nombre_año">2009</string>
    <string name="reparto">Reparto:</string>
    <string name="nombre_reparto">Vin Diesel</string>
    <string name="rating">8.5</string>

    <!-- Texto de peliculas Favoritas -->
    <string name="nombre_peliculas_favoritas">Peliculas</string>

    <!-- Menu -->
    <string name="nombre_usuario">Pablo51</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_tema_oscuro">Tema oscuro</string>
    <string name="menu_noche_clara">Noche clara</string>
    <string name="menu_noche_oscura">Noche oscura</string>

    <!-- Content Description de las imagenes -->
    <string name="contentDescripcion_cerrar">Icono para cerrar sesión</string>
    <string name="contentDescripcion_favoritos">Icono para mostrar peliculas favoritas</string>
    <string name="contentDescripcion_usuario">Icono para el usuario</string>
    <string name="contentDescripcion_foto">Icono de foto de perfil por defecto</string>
    <string name="contentDescripcion_like">Icono de darle like a una pelicula</string>
    <string name="contentDescripcion_corazon">Icono de darle me gusta a una pelicula</string>
    <string name="contentDescripcion_rating">Icono del Rating</string>
    <string name="contentDescripcion_menu_hamburguesa">Icono Menu Hamburguesa</string>
    <string name="contentDescripcion_logo">Icono Logo de la APP</string>

    <!-- Perfil Datos  -->
    <string name="perfil_datos">Datos</string>
    <string name="perfil_nombre_usuario">Nombre de usuario</string>
    <string name="perfil_email">Email</string>
    <string name="perfil_dato_email">pablo51@gmail.com</string>
    <string name="perfil_preferencias">Preferencias</string>
    <string name="perfil_select_tus_peliculas">Tus Peliculas</string>
    <string name="perfil_select_tus_actores">Tus Actores</string>
    <string name="perfil_select_tus_generos">Tus Géneros</string>
    <string name="perfil_boton_editar">Editar</string>

    <!-- DANIEL -->
    <string name="usuarioHint">Usuario</string>
    <string name="passwordHint">Password</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="noTienesCuenta">No tienes cuenta?</string>
    <string name="registrate">Regístrate!</string>
    <string name="email">Email</string>
    <string name="siguiente">Siguiente</string>

    <string name="selecPeliculas">Selec tus peliculas</string>
    <string name="selecActores">Selec tus actores</string>
    <string name="selecGeneros">Selec tus géneros</string>


    <string name="introduceNombre">Introduce tu nombre</string>
    <string name="introduceEmail">Introduce tu Email</string>
    <string name="introduceContraseña">Introduce tu contraseña</string>
    <string name="contraseña">Contraseña</string>

    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="perfil">Perfil</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="busqueda_pelicula">Busqueda película</string>
    <string name="busqueda_actor">Busqueda actor</string>
    <string name="busqueda_genero">Busqueda género</string>

    <string name="texto_selecciona_pelicula">Selecciona hasta 10 peliculas y añadelos a tu perfil</string>
    <string name="texto_selecciona_actor">Selecciona hasta 5 actores y añadelos a tu perfil</string>
    <string name="texto_selecciona_genero">Selecciona hasta 3 géneros y añadelos a tu perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>