<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/etPerfil"
        android:layout_width="81dp"
        android:layout_height="76dp"
        android:layout_marginTop="10dp"

        android:contentDescription="@string/contentDescripcion_foto"
        android:src="@mipmap/camara128px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerfil" />

    <TextView
        android:id="@+id/tvPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/perfil"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#66000000"
        app:layout_constraintTop_toBottomOf="@+id/etPerfil" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_input_white"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/introduceNombre"
        android:inputType="text"

        android:minHeight="48dp"
        android:textColor="@color/disabled_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/custom_input_white"
        android:ems="10"
        android:hint="@string/introduceEmail"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/disabled_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/etUsuario"
        app:layout_constraintTop_toTopOf="@+id/textView17"
        tools:ignore="LabelFor,TextSizeCheck" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/custom_input_white"

        android:ems="10"

        android:hint="@string/introduceContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"

        android:textColor="@color/disabled_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/tvContraseña"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/tvContraseña"
        tools:ignore="LabelFor,TextSizeCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/perfil_nombre_usuario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/perfil_email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/tvContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/contraseña"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/rojo_guardar"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/guardar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btCancelar" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cancelar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave" />

</androidx.constraintlayout.widget.ConstraintLayout>