<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_question_image"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:baselineAligned="false"
        android:elevation="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@mipmap/poster_placeholder"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDescripcion_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_question_image"
        app:srcCompat="@mipmap/estrella"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_movie_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_star"
        app:layout_constraintTop_toTopOf="@+id/iv_star"
        tools:text="@string/rating" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDescripcion_like"
        app:layout_constraintEnd_toStartOf="@+id/iv_corazon"
        app:layout_constraintTop_toBottomOf="@+id/cv_question_image"
        app:srcCompat="@mipmap/like"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_corazon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/contentDescripcion_corazon"
        app:layout_constraintStart_toEndOf="@+id/iv_like"
        app:layout_constraintTop_toTopOf="@+id/iv_like"
        app:srcCompat="@mipmap/corazon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/cv_question_image"
        app:layout_constraintStart_toStartOf="@+id/cv_question_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating"
        tools:text="@string/nombre_pelicula" />
</androidx.constraintlayout.widget.ConstraintLayout>