<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPerfil"
        android:layout_width="100dp"
        android:layout_height="104dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/contentDescripcion_foto"
        android:scaleType="centerCrop"
        android:src="@mipmap/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvNombrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nombre_usuario"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPerfil"
        app:layout_constraintStart_toStartOf="@+id/imageViewPerfil"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPerfil" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginTop="30dp"
        android:background="#20000000"
        app:layout_constraintTop_toBottomOf="@+id/tvNombrePerfil" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/perfil_datos"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <EditText
        android:id="@+id/tvUser2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:longClickable="false"
        android:minHeight="48dp"
        android:text="@string/nombre_usuario"
        android:textColor="@color/disabled_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:longClickable="false"
        android:minHeight="48dp"
        android:text="@string/perfil_dato_email"
        android:textColor="@color/disabled_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/tvUser2"
        app:layout_constraintTop_toTopOf="@+id/textView17"
        tools:ignore="LabelFor,TextSizeCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/perfil_nombre_usuario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/perfil_email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/perfil_boton_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>