<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@mipmap/lupa"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/busqueda_genero"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvMisPeliculas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="0"
        android:text="@string/perfil_select_tus_generos"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="0"
        android:fontFamily="@font/roboto"
        android:text="@string/texto_selecciona_genero" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>