<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ImageView para la imagen de la película -->
            <ImageView
                android:id="@+id/ivImageLong"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/poster_placeholder"
                android:scaleType="centerCrop"
                android:src="@mipmap/poster_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- ImageView para la imagen de la película flotante -->
            <ImageView
                android:id="@+id/ivMovieDetail"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/poster_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImageLong" />

            <!-- TextView para el nombre de la película -->
            <TextView
                android:id="@+id/tvNombrePelicula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/nombre_pelicula"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toStartOf="@id/ivMovieDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImageLong" />

            <!-- TextView para el género -->
            <TextView
                android:id="@+id/tvPeliculaGenero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nombre_genero"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@id/tvNombrePelicula"
                app:layout_constraintStart_toStartOf="@id/tvNombrePelicula"
                app:layout_constraintTop_toBottomOf="@id/tvNombrePelicula" />

            <!-- TextView para el año de la película -->
            <TextView
                android:id="@+id/tvPeliculaAño"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nombre_año"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@id/tvPeliculaGenero"
                app:layout_constraintStart_toStartOf="@id/tvPeliculaGenero"
                app:layout_constraintTop_toBottomOf="@id/tvPeliculaGenero" />

            <!-- TextView para el rating -->
            <TextView
                android:id="@+id/tvPeliculaRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@id/tvPeliculaAño"
                app:layout_constraintStart_toStartOf="@id/tvPeliculaAño"
                app:layout_constraintTop_toBottomOf="@id/tvPeliculaAño" />

            <!-- TextView para la descripción de la película -->
            <TextView
                android:id="@+id/tvPeliculaDescripcion"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/nombre_descripcion"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivMovieDetail"
                app:layout_constraintStart_toStartOf="@id/tvPeliculaRating"
                app:layout_constraintTop_toBottomOf="@+id/ivMovieDetail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>